<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProductActivity">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="245dp"
        android:layout_height="327dp"
        android:layout_marginBottom="@dimen/default_padding"
        android:scaleType="fitXY"
        android:src="@drawable/group" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/Copmany_text"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/companyEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        />

</LinearLayout>
</FrameLayout>
<TextView

android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/Product_name"
android:textSize="@dimen/default_text_size"
    android:layout_marginTop="@dimen/default_padding"
    />
    <EditText
        android:id="@+id/productEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding">
        <TextView android:text="@string/level_txt"/>
    <RadioGroup>
        <RadioButton
        android:id="@+id/level_GPU"

        android:layout_height="wrap_content"
        android:text="@string/level_txt_GPU"
            android:layout_width="match_parent" />
    <RadioButton
        android:id="@+id/level_CPU"

        android:layout_height="wrap_content"
        android:text="@string/level_txt_CPU"
        android:layout_width="match_parent"/>
    </RadioGroup>
</TableRow>
<TableRow
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/default_padding">
<TextView android:text="@string/flg_txt"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<CheckBox
    android:id="@+id/Date_flg"
    android:layout_height="wrap_content"
    android:text="@string/Date_flg_txt"
    android:layout_width="match_parent" />
</LinearLayout>
</TableRow>
</TableLayout>
    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:onClick="onOkBtnClick"
        android:text="@string/btn_ok_text" />


</LinearLayout>